# vk-scritps

./: .gitignore  broadcast_config.yml  chat_members.csv  chat_settings.json  chats.txt  pyproject.toml  tokens.txt
src/vk_scripts/: config.py  core.py  main.py  test.py
src/vk_scripts/broadcaster/: broadcaster.py  main.py  models.py  scheduler.py
src/vk_scripts/chat_members/: main.py
src/vk_scripts/kick/: main.py
src/vk_scripts/user_chats/: main.py
src/vk_scripts/vk/: __init__.py  api_client.py  exceptions.py  types.py
